--- a/src/app/user/edit-user/edit-user.component.html
+++ b/src/app/user/edit-user/edit-user.component.html
@@ -80,6 +80,18 @@
               <input
                 type="checkbox"
                 class="form-check-input"
+                formControlName="isBuyer"
+              />
+              <label class="form-check-label">Buyer</label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <div class="form-check form-switch">
+              <input
+                type="checkbox"
+                class="form-check-input"
                 formControlName="isDonor"
               />
               <label class="form-check-label">Donor</label>
@@ -96,6 +108,19 @@
                 formControlName="isAdmin"
               />
               <label class="form-check-label">Admin</label>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <div class="form-check form-switch">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                formControlName="isApiUser"
+              />
+              <label class="form-check-label">Api User</label>
             </div>
           </div>
         </div>
