--- a/src/app/container-allotment/container-request-detail/container-request-detail.component.html
+++ b/src/app/container-allotment/container-request-detail/container-request-detail.component.html
@@ -72,6 +72,19 @@
       />
     </div>
   </div>
+  <div class="row mb-3">
+    <div class="col-md-4">
+      <label for="replenishment" class="form-label">
+        Replenishment Order
+      </label>
+      <input
+        class="form-control"
+        id="replenishment"
+        disabled
+        [value]="donationContainer?.replenishmentOrderId"
+      />
+    </div>
+  </div>
 </div>
 
 <!-- Modal Footer -->
