Fixed: Donor Name always same on Admin > Donations Page.

--- a/src/app/donation/donation.component.html
+++ b/src/app/donation/donation.component.html
@@ -37,7 +37,7 @@
             <td>
               {{ donation.createdDate | date : "mediumDate" }}
             </td>
-            <td>Chanchal Kumar</td>
+            <td>{{ donation.donor?.name }}</td>
             <td>
               <div class="dropdown">
                 <button
