--- a/src/styles.scss
+++ b/src/styles.scss
@@ -400,3 +400,25 @@ header,
   background-color: var(--theme-color);
   border-color: var(--theme-color);
 }
+
+.toast-container {
+  .ngx-toastr {
+    width: 300px;
+
+    .toast-progress {
+      background-color: #f5f7fa;
+    }
+  }
+}
+
+.toast-container.toast-top-center .ngx-toastr.wide-toast {
+  width: 330px;
+}
+
+.toast-container.toast-top-center .ngx-toastr.wide-error-toast {
+  width: 480px;
+}
+
+.table-responsive {
+  min-height: 280px;
+}
