--- a/src/app/container-allotment/container-allotment.component.html
+++ b/src/app/container-allotment/container-allotment.component.html
@@ -6,104 +6,126 @@
   <div class="user-card-body">
     <!-- Containers List -->
 
-    <table class="table table-borderless" id="container-allotment-table">
-      <thead>
-        <tr class="text-nowrap">
-          <th>#Id</th>
-          <th>Container Type</th>
-          <th>Status</th>
-          <th>Date</th>
-          <td>Requested Units</td>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for(donationContainer of donationContainers; track
-        donationContainer.id){
-        <tr>
-          <td>
-            <span class="table-list-code"> {{ donationContainer.id }} </span>
-          </td>
-          <td class="text-nowrap">
-            {{ donationContainer.containerType!.name }}
-          </td>
+    @if (donationContainersLoaded) {
+      <table class="table table-borderless" id="container-allotment-table">
+        <thead>
+          <tr class="text-nowrap">
+            <th>#Id</th>
+            <th>Container Type</th>
+            <th>Status</th>
+            <th>Date</th>
+            <td>Requested Units</td>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          @for (
+            donationContainer of pagedDonationContainers?.items;
+            track donationContainer.id
+          ) {
+            <tr>
+              <td>
+                <span class="table-list-code">
+                  {{ donationContainer.id }}
+                </span>
+              </td>
+              <td class="text-nowrap">
+                {{ donationContainer.containerType!.name }}
+              </td>
 
-          <td>
-            @switch (donationContainer.status) { @case
-            (ContainerStatus.Requested) {
-            <span class="badge badge-primary">Requested</span>
-            } @case (ContainerStatus.Approved) {
-            <span class="badge badge-success">Approved</span>
-            } @case (ContainerStatus.Shipped) {
-            <span class="badge badge-info">Shipped</span>
-            } @case (ContainerStatus.Rejected) {
-            <span class="badge badge-danger">Rejected</span>
-            } }
-          </td>
-
-          <td class="text-nowrap">
-            {{ donationContainer.createdDate | date : "mediumDate" }}
-          </td>
-
-          <td>{{ donationContainer.requestedUnits }}</td>
-
-          <td>
-            <div class="dropdown">
-              <button
-                class="btn btn-default"
-                type="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa fa-ellipsis-v"></i>
-              </button>
-              <ul class="dropdown-menu">
-                <li>
-                  <button
-                    class="dropdown-item"
-                    type="button"
-                    (click)="showContainerRequestDetail(donationContainer.id)"
-                  >
-                    Detail
-                  </button>
-                </li>
-                @if(donationContainer.status==ContainerStatus.Requested){
-                <li>
-                  <button
-                    class="dropdown-item"
-                    type="button"
-                    (click)="approveContainerRequest(donationContainer.id)"
-                  >
-                    Approve
-                  </button>
-                </li>
-
-                <li>
-                  <button
-                    class="dropdown-item"
-                    type="button"
-                    (click)="rejectContainerRequest(donationContainer.id)"
-                  >
-                    Reject
-                  </button>
-                </li>
+              <td>
+                @switch (donationContainer.status) {
+                  @case (ContainerStatus.Requested) {
+                    <span class="badge badge-primary">Requested</span>
+                  }
+                  @case (ContainerStatus.Approved) {
+                    <span class="badge badge-success">Approved</span>
+                  }
+                  @case (ContainerStatus.Shipped) {
+                    <span class="badge badge-info">Shipped</span>
+                  }
+                  @case (ContainerStatus.Rejected) {
+                    <span class="badge badge-danger">Rejected</span>
+                  }
                 }
+              </td>
 
-                <li>
+              <td class="text-nowrap">
+                {{ donationContainer.createdDate | date: "mediumDate" }}
+              </td>
+
+              <td>{{ donationContainer.requestedUnits }}</td>
+
+              <td>
+                <div class="dropdown">
                   <button
-                    class="dropdown-item"
+                    class="btn btn-default"
                     type="button"
-                    (click)="deleteContainerRequest(donationContainer.id)"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
                   >
-                    Delete
+                    <i class="fa fa-ellipsis-v"></i>
                   </button>
-                </li>
-              </ul>
-            </div>
-          </td>
-        </tr>
-        }
-      </tbody>
-    </table>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <button
+                        class="dropdown-item"
+                        type="button"
+                        (click)="
+                          showContainerRequestDetail(donationContainer.id)
+                        "
+                      >
+                        Detail
+                      </button>
+                    </li>
+                    @if (
+                      donationContainer.status == ContainerStatus.Requested
+                    ) {
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          type="button"
+                          (click)="
+                            approveContainerRequest(donationContainer.id)
+                          "
+                        >
+                          Approve
+                        </button>
+                      </li>
+
+                      <li>
+                        <button
+                          class="dropdown-item"
+                          type="button"
+                          (click)="rejectContainerRequest(donationContainer.id)"
+                        >
+                          Reject
+                        </button>
+                      </li>
+                    }
+
+                    <li>
+                      <button
+                        class="dropdown-item"
+                        type="button"
+                        (click)="deleteContainerRequest(donationContainer.id)"
+                      >
+                        Delete
+                      </button>
+                    </li>
+                  </ul>
+                </div>
+              </td>
+            </tr>
+          }
+        </tbody>
+      </table>
+      <app-paging-control
+        [pagedResponse]="pagedDonationContainers"
+        (onPageChanged)="goToPage($event)"
+      ></app-paging-control>
+    } @else {
+      <p>Loading..</p>
+    }
   </div>
 </div>
