--- a/src/app/donation/donation.component.html
+++ b/src/app/donation/donation.component.html
@@ -3,86 +3,100 @@
     <h4 class="user-card-title">Donations</h4>
   </div>
   <div class="user-card-body">
-    <!-- Donations List -->
-    <div class="table-responsive">
-      <table class="table table-borderless text-nowrap" id="donation-table">
-        <thead>
-          <tr>
-            <th>#Id</th>
-            <th>Tracking Number</th>
-            <th>Status</th>
-            <th>Date</th>
-            <th>Donor</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          @for(donation of donations; track donation.id) {
-          <tr>
-            <td>
-              <span class="table-list-code">{{ donation.id }}</span>
-            </td>
-            <td>{{ donation.trackingNumber }}</td>
-            <td>
-              @switch(donation.status) { @case (DonationStatus.Donated) {
-              <span class="badge badge-primary">Dontated</span>
-              } @case (DonationStatus.Received) {
-              <span class="badge badge-secondary">Received</span>
-              } @case (DonationStatus.Processed) {
-              <span class="badge badge-success">Processed</span>
-              } @case (DonationStatus.Paid) {
-              <span class="badge badge-info">Paid</span>
-              } }
-            </td>
-            <td>
-              {{ donation.createdDate | date : "mediumDate" }}
-            </td>
-            <td>{{ donation.donor?.name }}</td>
-            <td>
-              <div class="dropdown">
-                <button
-                  class="btn btn-default"
-                  type="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  <i class="fa fa-ellipsis-v"></i>
-                </button>
-                <ul class="dropdown-menu">
-                  <li>
+    @if (this.donationsLoaded) {
+      <!-- Donations List -->
+      <div class="table-responsive">
+        <table class="table table-borderless text-nowrap" id="donation-table">
+          <thead>
+            <tr>
+              <th>#Id</th>
+              <th>Tracking Number</th>
+              <th>Status</th>
+              <th>Date</th>
+              <th>Donor</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (donation of donations; track donation.id) {
+              <tr>
+                <td>
+                  <span class="table-list-code">{{ donation.id }}</span>
+                </td>
+                <td>{{ donation.trackingNumber }}</td>
+                <td>
+                  @switch (donation.status) {
+                    @case (DonationStatus.Donated) {
+                      <span class="badge badge-primary">Dontated</span>
+                    }
+                    @case (DonationStatus.Received) {
+                      <span class="badge badge-secondary">Received</span>
+                    }
+                    @case (DonationStatus.Processed) {
+                      <span class="badge badge-success">Processed</span>
+                    }
+                    @case (DonationStatus.Paid) {
+                      <span class="badge badge-info">Paid</span>
+                    }
+                  }
+                </td>
+                <td>
+                  {{ donation.createdDate | date: "mediumDate" }}
+                </td>
+                <td>{{ donation.donor?.name }}</td>
+                <td>
+                  <div class="dropdown">
                     <button
+                      class="btn btn-default"
                       type="button"
-                      class="dropdown-item"
-                      (click)="handleShowDonationDetail(donation.id)"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
                     >
-                      Detail
+                      <i class="fa fa-ellipsis-v"></i>
                     </button>
-                  </li>
-                  <li>
-                    <button
-                      type="button"
-                      class="dropdown-item"
-                      (click)="handleShowEditDonation(donation.id)"
-                    >
-                      Edit
-                    </button>
-                  </li>
-                  <li>
-                    <button
-                      type="button"
-                      class="dropdown-item"
-                      (click)="handleDeleteDonation(donation.id)"
-                    >
-                      Delete
-                    </button>
-                  </li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          }
-        </tbody>
-      </table>
-    </div>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <button
+                          type="button"
+                          class="dropdown-item"
+                          (click)="handleShowDonationDetail(donation.id)"
+                        >
+                          Detail
+                        </button>
+                      </li>
+                      <li>
+                        <button
+                          type="button"
+                          class="dropdown-item"
+                          (click)="handleShowEditDonation(donation.id)"
+                        >
+                          Edit
+                        </button>
+                      </li>
+                      <li>
+                        <button
+                          type="button"
+                          class="dropdown-item"
+                          (click)="handleDeleteDonation(donation.id)"
+                        >
+                          Delete
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+            }
+          </tbody>
+        </table>
+      </div>
+
+      <app-paging-control
+        [pagedResponse]="pagedDonations"
+        (onPageChanged)="goToPage($event)"
+      ></app-paging-control>
+    } @else {
+      <p>Loading..</p>
+    }
   </div>
 </div>
